get all users and log

--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -183,6 +183,9 @@ dependencies = [
 	{org = "ballerina", name = "lang.value"},
 	{org = "ballerina", name = "observe"}
 ]
+modules = [
+	{org = "ballerina", packageName = "log", moduleName = "log"}
+]
 
 [[package]]
 org = "ballerina"
@@ -268,40 +271,13 @@ modules = [
 ]
 
 [[package]]
-org = "ballerinax"
-name = "covid19"
-version = "1.2.0"
-dependencies = [
-	{org = "ballerina", name = "http"},
-	{org = "ballerina", name = "url"},
-	{org = "ballerinai", name = "observe"}
-]
-modules = [
-	{org = "ballerinax", packageName = "covid19", moduleName = "covid19"}
-]
-
-[[package]]
-org = "ballerinax"
-name = "worldbank"
-version = "1.2.0"
-dependencies = [
-	{org = "ballerina", name = "http"},
-	{org = "ballerina", name = "url"},
-	{org = "ballerinai", name = "observe"}
-]
-modules = [
-	{org = "ballerinax", packageName = "worldbank", moduleName = "worldbank"}
-]
-
-[[package]]
 org = "riccardoboggetti"
 name = "demo1"
 version = "0.1.0"
 dependencies = [
 	{org = "ballerina", name = "http"},
-	{org = "ballerinai", name = "observe"},
-	{org = "ballerinax", name = "covid19"},
-	{org = "ballerinax", name = "worldbank"}
+	{org = "ballerina", name = "log"},
+	{org = "ballerinai", name = "observe"}
 ]
 modules = [
 	{org = "riccardoboggetti", packageName = "demo1", moduleName = "demo1"}
